
You should have received a copy of the GNU General Public License
along with EditXT.  If not, see <http://www.gnu.org/licenses/>.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This file contains notable new features and other large changes. See
the source repository for the gory details of what actually happened.

????-??-?? - 1.4.0
  - Added Python Replace feature to find command. This feature evaluates a
    Python expression during the replace phase of a find/replace operation
    allowing text transformations such as case changes or conditional
    replacements, far beyond what is possible with a regular expression find/
    replace operation. Example replace expression:

      match.group(1).lower() + match.group(2)

  - Dramatic performance boost when highlighting selected text.
  - Add count-occurrences action to find command.
  - Add right_margin config settings:

      right_margin:
        position: 80
        line_color: BBDDBB
        margin_color: DDBBDD

  - Add syntax definitions for shell scripts and Objective C

2013-09-22 - 1.3.0
  - Omit command from history if it has a leading space.
  - Integrate GUI and hotkey commands with command bar history.
  - Improve indent size calculation.
  - Added status message output to command bar.
  - Log config file path on load.
  - Move document defaults to config file:
    indent:
      mode: (space|tab) # default is space
      size: 4
    newline_mode: (LF|CR|CRLF|UNICODE) # default is LF
    soft_wrap: (none|word)
  - Added commands:
    - Clear highlighted text (clear_highlighted_text).
    - Reload config (reload_config)
    - "set <variable> ..." to set document variables:
      - highlight_selected_text
      - indent
      - newline_mode
      - soft_wrap
  - Make Preferences... menu item open config file.
  - Add config file (~/.editxt/config.yaml) with selection matching settings:
    highlight_selected_text:
      enabled: (yes|no) # default is yes